added Dana and Liz updates; #17

--- a/www/sds_newsletter_2023.qmd
+++ b/www/sds_newsletter_2023.qmd
@@ -87,6 +87,9 @@ This upcoming year, I will be teaching *Introduction to Probability and Statisti
 
 ## Alumni Updates
 
+- **Liz Stuart 97** (math major): I've been [named Chair of the Biostatistics Department at Johns Hopkins Bloomberg School of Public Health](https://publichealth.jhu.edu/2023/elizabeth-stuart-named-biostatistics-department-chair).  She would love to welcome more Smith alums to the field and Department!  She also is succeeding former Smith faculty member Nick Horton as co-chair of the National Academies’ Committee on Applied and Theoretical Statistics.
+- **Dana Udwin '14**: I'm happy to report that I defended my dissertation in biostatistics and joined the JHU Applied Physics Laboratory as a senior data scientist.
+
 
 ## What's next? 
 
