added Christa update

--- a/www/sds_newsletter_2023.qmd
+++ b/www/sds_newsletter_2023.qmd
@@ -90,6 +90,7 @@ This upcoming year, I will be teaching *Introduction to Probability and Statisti
 ## Alumni Updates
 
 - **[Brittany Bennett '16](https://www.brittanybennett.com/)**: I am leading the analytics and engineering at Working Families Party as their Data Director, working to find ways to leverage data to win more elections. This role has challenged me in so many ways. I am dipping my toes into more advanced data engineering practices, DevOps, analytics engineering, the wild west of vendor politics, contract negotiations, and product development. While the time I spend coding is becoming less and less, I'm deeply enjoying my work at the intersection of data and electoral politics. Otherwise, I'm enjoying plenty of time in the kitchen as a hobbyist home-chef and have added many new recipes to my cooking Instagram. Pittsburgh is still home for now, though I have my eyes on Chicago or Philly. 
+- [**Christa Chiao '15**](https://www.linkedin.com/in/christa-c-3a674453/): I am continuing to work in campaign-side electoral politics in data science and data engineering roles. This past year I graduated from the QMSS program at Columbia University and later worked as a Senior Data Scientist at the Democratic Senatorial Campaign Committee during the 2022 midterm cycle. I'm looking forward to electing more Democrats in 2024 and to keep learning about survey research, managing data teams, and more. 
 - [**Sara Stoudt '15**](https://sastoudt.github.io/): Year 2 teaching at Bucknell was a busy one! Here are some things I’m proud of from the year: we released our second [Data Science by Design Anthology ("Our Environment")](https://datasciencebydesign.org/book-2), I developed and taught a new first year seminar ["Storytelling with Data"](https://docs.google.com/document/d/19HnV9PRFGb4djHFBuL_dhYraV4fL9zRoGwPhQoE9BAs/edit?usp=sharing), I got to give an [USCOTS keynote](https://www.causeweb.org/cause/uscots/uscots23/keynotes/4) and be on an [SDSS panel](https://ww2.amstat.org/meetings/sdss/2023/featuredspeakers.cfm) with superstars [**Christine Zhang '09**](https://twitter.com/christinezhang?lang=en) (another Smithie, we're everywhere) and [Roger Peng](https://rdpeng.org/) (I only fangirled a little over his podcasts). I'm on pre-tenure leave this upcoming school year, so if anyone is in need of a seminar speaker, I'm up for a travel adventure. :D 
 - **Liz Stuart 97** (math major): I've been [named Chair of the Biostatistics Department at Johns Hopkins Bloomberg School of Public Health](https://publichealth.jhu.edu/2023/elizabeth-stuart-named-biostatistics-department-chair).  She would love to welcome more Smith alums to the field and Department!  She also is succeeding former Smith faculty member Nick Horton as co-chair of the National Academies’ Committee on Applied and Theoretical Statistics.
 - **Dana Udwin '14**: I'm happy to report that I defended my dissertation in biostatistics and joined the JHU Applied Physics Laboratory as a senior data scientist.
