--- a/www/sds_newsletter_2023.qmd
+++ b/www/sds_newsletter_2023.qmd
@@ -59,6 +59,7 @@ I am also very proud of our book club this year! We read six books: Stoner, The 
 
 #### Kaitlyn Cook
 
+Filler!
 
 #### Randi Garcia
 
