--- a/www/sds_newsletter_2023.qmd
+++ b/www/sds_newsletter_2023.qmd
@@ -47,7 +47,9 @@ Learning a new language in your forties hasn't been easy, but I took SPN 200 at 
 
 Cuando vuelvo hablaremos español juntos!
 
-#### Casey Berger
+#### [Casey Berger](https://www.caseyeberger.com/)
+
+I'm so excited to be joining SDS here at Smith. I've loved my last two years as a visitor in the physics department, but my work has always been interdisciplinary, so it feels fitting that I start my tenure-track role jointly appointed in PHY and SDS. I look forward to getting to know a whole new set of majors and embrace the challenges and joys of teaching and doing research across fields. My summer has already been packed with a return to conference travel -- my first in-person conferences and workshops since the pandemic started. It's a nice blend of teaching, service, and research, starting with the American Physical Society's Data Science Education Community of Practice ([*APS DSECOP*](https://dsecop.org/)) workshop on data science in the physics classroom, then helping coordinate events as an alum at the Annual Program Review for the DOE's Computational Science Graduate Fellowship ([*CSGF*](https://www.krellinst.org/csgf/)), and finishing off the summer presenting at the [*International Symposium on Lattice Field Theory*](https://indico.fnal.gov/event/57249/) at FermiLab. As if that weren't enough on my summer schedule, my spouse and I bought a house in the area and are moving in next month. It will be nice when the dust settles -- just in time for the fall semester!
 
 #### Shiya Cao
 
