--- a/www/sds_newsletter_2023.qmd
+++ b/www/sds_newsletter_2023.qmd
@@ -61,6 +61,15 @@ I am also very proud of our book club this year! We read six books: Stoner, The 
 
 #### Kaitlyn Cook
 
+Year one is officially in the books! I had a wonderful time getting to know and work alongside the students, staff, and faculty in the SDS program---thank you for such a warm welcome to Northampton and to Smith. 
+
+Some personal highlights from this past year include:
+1. Teaching *Introduction to Probability and Statistics* (SDS 220), *Probability* (MTH 246) and *Mathematical Statistics* (MTH/SDS 320), all for the first time, and adapting the latter two courses to include a strong focus on simulation in R.
+2. Temporarily buying Amazon out of loaded die. (It was for a good statistical cause!)
+3. Publishing an article on [marginal proportional hazards models for clustered interval-censored data](https://doi.org/10.1111/biom.13787) in *Biometrics*, continuing existing collaborations with sleep medicine and COVID-19 researchers in Boston, and building new connections and collaborations with the Five College statistics community and other researchers here at Smith.  
+
+Finally, I would also be remiss to not mention the excellent progress I made on my reality TV show “research" “agenda”, having managed to watch all 14 seasons of Ink Master and 31 seasons (and counting) of the Amazing Race within the last year.
+
 #### Randi Garcia
 
 On September 21, 2023 my daughter Devyn Sequoia Durbin was born! She is amazing and kept me very busy this year. I was lucky to have enjoyed parental leave in the fall and then a sabbatical in the spring. I took minimal time for research this year, but I did continue my collaborations with Nicole Campione-Barr at the University of Missouri on adolescent disclosure and family systems and with Sarah Witkowski in the Exercise and Sport Studies department here at Smith on perimenopause symptoms, activity, and cardiovascular health. I also took on a Associate Editor role at the Journal of Personality and Social Psychology. 
