--- a/www/sds_newsletter_2023.qmd
+++ b/www/sds_newsletter_2023.qmd
@@ -69,7 +69,7 @@ Some personal highlights from this past year include:
 2. Temporarily buying Amazon out of loaded die. (It was for a good statistical cause!)
 3. Publishing an article on [marginal proportional hazards models for clustered interval-censored data](https://doi.org/10.1111/biom.13787) in *Biometrics*, continuing existing collaborations with sleep medicine and COVID-19 researchers in Boston, and building new connections and collaborations with the Five College statistics community and other researchers here at Smith.  
 
-Finally, I would also be remiss to not mention the excellent progress I made on my reality TV show “research" “agenda”, having managed to watch all 14 seasons of Ink Master and 31 seasons (and counting) of the Amazing Race within the last year.
+Finally, I would also be remiss to not mention the excellent progress I made on my reality TV show “research" agenda, having managed to watch all 14 seasons of Ink Master and 31 seasons (and counting) of the Amazing Race within the last year.
 
 #### Randi Garcia
 
