Added Yujie and Kementari

--- a/www/sds_newsletter_2024.qmd
+++ b/www/sds_newsletter_2024.qmd
@@ -37,9 +37,6 @@ https://www.facebook.com/groups/665780273559948/), a Google group, a LinkedIn gr
 
 
 
-#### [Casey Berger](https://www.caseyeberger.com/)
-
-
 #### Shiya Cao
 
 
@@ -72,6 +69,15 @@ https://www.facebook.com/groups/665780273559948/), a Google group, a LinkedIn gr
 
 #### [Lindsay Poirier](https://lindsaypoirier.github.io/)
 
+
+
+#### Kementari Whitcher
+
+
+#### Yujie Wang
+
+
+#### Ab Mosca
 
 
 ## Alumni Updates
