added Lindsay's 2024 update

--- a/www/sds_newsletter_2024.qmd
+++ b/www/sds_newsletter_2024.qmd
@@ -84,7 +84,9 @@ This upcoming year, I will be teaching my *Research Seminar in Political Network
 
 #### [Lindsay Poirier](https://lindsaypoirier.github.io/)
 
+Hello SDS friends! For me, this has been year of building new connections and finding new forms of balance. A Spring sabbatical provided me time to really submerge into aspects of my research program. This past February I spent a month in Frankfurt, Germany on a Mercator Fellowship at Goethe University. While I was there, I delivered a number of lectures and workshops and had a chance to work with faculty, post-docs, and graduate students brainstorming how to devise new ethnographic methods for studying the cultural aspects of data production, circulation, and use. Then in March, with some tremendous collaborators at UCLA, Northeastern University, and Whitman College, I published a paper documenting that almost half of US carceral facilities are proximate to sites of contamination by "forever chemicals" (or PFAS). The paper was covered in *[The Hill](https://thehill.com/policy/energy-environment/4547224-forever-chemicals-pfas-us-prisons-drinking-water-dangerous-levels-study/)*, *[The Guardian](https://www.theguardian.com/environment/2024/apr/08/prisons-contaminated-water-pfas)*, and supported the development of [proposed legislation](https://www.markey.senate.gov/news/press-releases/senator-markey-rep-pressley-introduce-environmental-health-in-prisons-act) for improving environmental health in prisons. Publishing this paper meant a lot to me, both personally and professionally. Sabbatical also granted me some time for more personal pursuits. I've been working on my French, devising Massachusetts adventures for me and my 2.5-year old niece, and putting some elbow grease into making my new house in South Hadley feel more like a home. 
 
+This coming year, I'm looking forward to continuing my research examining the cultural origins of the [Open Payments](https://openpaymentsdata.cms.gov/) database - anthropologically studying how the professionals responsible for disclosing data about their payments to healthcare providers develop certain accounting and meaning-making strategies in their work. I look forward to continue teaching *Data Ethnography* (SDS 237) in the Fall and Spring, and to offering a new course called *Community-Based Data Science* (SDS) in the Spring.
 
 #### Kementari Whitcher
 
