--- a/www/sds_newsletter_2024.qmd
+++ b/www/sds_newsletter_2024.qmd
@@ -52,14 +52,18 @@ We're working on [an R package](https://github.com/beanumber/tidychangepoint/) a
 My second year at Smith is in the books. I continued to work with students in my [Disability Inclusion Analytics Lab (DIAL)](https://scao53.github.io/). I took two Smithies **Christy Yang ’25J** and **Vicky Xu ’26** to attend the *Women in Statistics and Data Science (WSDS) Conference* in Bellevue, WA in Fall 2023. I am proud of our accomplishments so far:
 
 Note: Student collaborators are <u>underlined</u>.
-(1) Cao, S., <u>Yang, C. ’25J</u>, and <u>Xu, V. ’26</u>. (2023). “Examining Environmental Barriers for Disabled Employees in Different Industries and Work Spaces,” Women in Statistics and Data Science (WSDS) Conference, Bellevue, WA.
-(2) <u>Lin, J. Q. ’25J</u>, <u>Liu, K. ’24</u>, Cao, S., <u>Liu, Z. ’25</u>, and <u>Pham, L. ’25</u>. “Examining the Intersection of Disability, Race, Gender, and Age in Shaping the Employment Outcomes of Higher Educated Individuals,” under review at Journal of Disability Policy Studies. 
-(3) Cao, S., <u>Yang, C. ’25J</u>, and <u>Markert, E. ’25</u>. (2024). “Examining Environmental Barriers for Disabled Employees in Different Industries and Work Spaces,” Smith College Celebrating Collaborations Event, Northampton, MA.
-(4) Cao, S., <u>Yang, C. ’25J</u>, <u>Markert, E. ’25</u>, and <u>Xu, V. ’26</u>. “Examining Environmental Barriers for Disabled Employees in Different Industries and Work Spaces,” under review at Statistics and Public Policy.
+
+(1) Cao, S., <u>Yang, C. ’25J</u>, and <u>Xu, V. ’26</u>. (2023). “Examining Environmental Barriers for Disabled Employees in Different Industries and Work Spaces,” *Women in Statistics and Data Science (WSDS) Conference*, Bellevue, WA.
+
+(2) <u>Lin, J. Q. ’25J</u>, <u>Liu, K. ’24</u>, Cao, S., <u>Liu, Z. ’25</u>, and <u>Pham, L. ’25</u>. “Examining the Intersection of Disability, Race, Gender, and Age in Shaping the Employment Outcomes of Higher Educated Individuals,” under review at *Journal of Disability Policy Studies*. 
+
+(3) Cao, S., <u>Yang, C. ’25J</u>, and <u>Markert, E. ’25</u>. (2024). “Examining Environmental Barriers for Disabled Employees in Different Industries and Work Spaces,” *Smith College Celebrating Collaborations Event*, Northampton, MA.
+
+(4) Cao, S., <u>Yang, C. ’25J</u>, <u>Markert, E. ’25</u>, and <u>Xu, V. ’26</u>. “Examining Environmental Barriers for Disabled Employees in Different Industries and Work Spaces,” under review at *Statistics and Public Policy*.
 
 In addition, I built new collaborations with other scholars this year. I have been working with Heather Rosenfeld from the Spatial Analysis Lab (SAL) at Smith on a research project named Mapping for Access on the Smith College Campus: A Participatory Mapping Approach. I have also been collaborating with Keegan Kang, Assistant Professor of Mathematics at Bucknell University, on a research project named Model Interpretation after Using Random Projections: An Applied Study on Travel Disability Data. 
 
-Moreover, I am working on publishing my doctoral dissertation, examining information systems-enabled workplace inclusion for disabled employees. One of my dissertation papers is [published](https://content.iospress.com/articles/work/wor220716) at the peer-reviewed journal Work: A Journal of Prevention, Assessment & Rehabilitation. I also gave a Sigma Xi talk at Smith in Fall 2023 and another talk for a Statistics II course at Bucknell University in Spring 2024. 
+Moreover, I am working on publishing my doctoral dissertation, examining information systems-enabled workplace inclusion for disabled employees. One of my dissertation papers is [published](https://content.iospress.com/articles/work/wor220716) at the peer-reviewed journal *Work: A Journal of Prevention, Assessment & Rehabilitation*. I also gave a Sigma Xi talk at Smith in Fall 2023 and another talk for a Statistics II course at Bucknell University in Spring 2024. 
 
 This year, I continued to teach SDS 192: Introduction to Data Science. In Fall 2023, I developed and taught a research seminar course SDS 300: Disability Inclusion and Data Analytics. In Spring 2024, I taught the senior capstone course SDS 410 and participated in the pedagogical partnerships program with my student pedagogical partner **My My Tran ’24**. I had great experiences teaching these courses. 
 
