--- a/README.Rmd
+++ b/README.Rmd
@@ -1,19 +1,19 @@
 ---
-title: "sds-www"
+title: "smithcollege-sds.github.io"
 output: github_document
 ---
 
   <!-- badges: start -->
-  [![website](https://github.com/SmithCollege-SDS/sds-www/actions/workflows/quarto.yaml/badge.svg)](https://github.com/SmithCollege-SDS/sds-www/actions/workflows/quarto.yaml)
+  [![website](https://github.com/SmithCollege-SDS/smithcollege-sds.github.io/actions/workflows/quarto.yaml/badge.svg)](https://github.com/SmithCollege-SDS/smithcollege-sds.github.io/actions/workflows/quarto.yaml)
   <!-- badges: end -->
 
 
-SDS content for the web not managed by college relations, available at <https://smithcollege-sds.github.io/sds-www/>
+SDS content for the web not managed by college relations, available at <https://smithcollege-sds.github.io/>
 
 In order to edit this website:
 
-1. The layout/style is based on `www/_quarto.yml`
-1. The contents are based on all `.qmd/.Rmd` files in the `www/` folder
+1. The layout/style is based on `_quarto.yml`
+1. The contents are based on all `.qmd/.Rmd` files
 
 In order to build this website:
 
